# programming-

./: .gitignore  README.md
lab10_git/: Makefile  README.md  func.c  struct.h
lab10_struct/: main.c
lab11_gdb/: 3.c
lab11_git/: 1.c  2.c  4.c  README.md
lab12_libraries/: README.md  flight.h  main.c
lab13_Make_CMake/: CMakeLists.txt  Makefile  README.md
lab13_Make_CMake/cmake_task/: CMakeLists.txt  README.md
lab13_Make_CMake/cmake_task/background/: CMakeLists.txt
lab13_Make_CMake/cmake_task/pipes/: CMakeLists.txt
lab13_Make_CMake/src/: func.c
lab14/: Makefile  flight.h  main.c
lab14_lists/: README.md  func.c
lab15_files/: Makefile  README.md  func.c  main.c  staff.csv  staff.h
lab16_threads/: README.md  chat.c  data.txt  graphic.py  matrix_multiplication.c  multiple_threads.c  sleep_sort.c  threads.md
lab17_test/: CMakeLists.txt  README.md  main.c  main.h
lab17_test/test/: CMakeLists.txt  test_other.c  test_simple_func.c  test_trig.c
lab18_cpp/: README.md
lab18_cpp/src/: main.cpp  paint_core.cpp
lab9_git/: README.md  mergesort.py  sort.c
lab_debug/: README.md  task5.c
